# greengrow

./: .gcloudignore  .gitignore  DEPLOY.md  Dockerfile  README.md  deploy.sh  run_local.sh
.agent/skill/frontend/: SKILL.md
.github/workflows/: deploy.yml
backend/: Dockerfile  inspect_dc_client.py  pyproject.toml  stores.db  test_dc_client_resolve.py  test_gemini_lite.py
backend/src/: Homedepot_Locations.csv  db.py  main.py
backend/src/services/: datacommons.py  earth_engine.py  intelligence.py  weather.py
data/: mock_signals.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AboutModal.tsx  Map.tsx  MapCircle.tsx  MapTileLayer.tsx  PlaceSearch.tsx  Table.tsx
frontend/src/utils/: api.ts
